fix(SearchByString): correct block overflow

--- a/src/components/SearchByString/SearchByString.css
+++ b/src/components/SearchByString/SearchByString.css
@@ -1,14 +1,20 @@
 .search-by-string {
   position: relative;
   width: 265px;
+  height: 45px;
   font-family: 'Roboto';
+  box-sizing: border-box;
+  
 }
 
 .search-by-string__container {
   position: relative;
-  margin: 0;
-  padding: 0;
+  display: flex;
+  height: 100%;
+  box-sizing: border-box;
   border-radius: 8px;
+  padding-left: 15px;
+  padding-right: 33px;
 }
 
 .search-by-string__notice-not-found {
@@ -54,7 +60,8 @@
   border: none;
   outline: none;
   width: 100%;
-  padding: 15px 33px 15px 15px;
+  /* padding: 15px 33px 15px 15px; */
+  align-self: center;
   font-weight: 400;
   line-height: 16px;
   font-family: 'Roboto';
@@ -65,7 +72,6 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-
 }
 
 /* выделение текста в input */
